# recipe-manager

./: .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  tailwind.config.js
.github/workflows/: build.yml
app/prompts/: extract_recipe_details.txt
app/views/: index.html  recipe.html
app/views/recipes/: index.html  show.html
data-dump/: instagram_video.sql  recipes.sql  transcript.sql
migrations/: 20240406164912_create_recipe_table.sql  20240406192138_add_info_json.sql  20240406194529_make_instagram_id_unique.sql  20240406203306_remove_unique_on_instagram_id.sql  20240407184632_create_transcripts.sql  20240408165909_simplify_transcript_model.sql  20240408172732_separate_out_reel.sql  20240408173226_merge_unprocessed_recipes.sql  20240408174044_move_transcripts_to_videos.sql  20240408175725_add_generated_at_field_to_recipe.sql  20240409174220_convert_transcripts_to_json.sql  20240410114222_combine_transcript_with_video.sql
src/: cli.rs  error.rs  fetch_reel_job.rs  main.rs
src/entities/: instagram_video.rs  mod.rs  prelude.rs  recipes.rs  transcript.rs  unprocessed_recipes.rs
src/jobs/: extract_transcript.rs  fetch_reel.rs  llm_extract_details.rs  mod.rs
views/: recipe.html
