[package]
name = "recipes-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "env"] }
fang = { version = "0.10.4", features = ["asynk"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
typetag = "0.2.16"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
lazy_static = "1.4.0"
once_cell = "1.19.0"
tempfile = "3.10.1"
regex = "1.10.4"
